--- a/PersonalApplication/MyOrganizerApplication.csproj
+++ b/PersonalApplication/MyOrganizerApplication.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{121A2052-F7A3-46DA-AF76-9C754A99D2A8}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>OOP2_2_PreLab</RootNamespace>
-    <AssemblyName>OOP2_2_PreLab</AssemblyName>
+    <AssemblyName>MyOrganizerApplication</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -52,6 +52,11 @@
     </Compile>
     <Compile Include="LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="UserManagement.cs">
       <SubType>Form</SubType>
@@ -123,14 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="Reminder.resx">
       <DependentUpon>Reminder.cs</DependentUpon>
     </EmbeddedResource>
@@ -166,31 +166,10 @@
     <None Include="Resources\updateuser.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\adduser.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\list.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\clipboard.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\clipboardx.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\add.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\budget.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\phonebook.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\reminder.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\backup.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\appLogov2.png" />
